--- a/web/css/productDetails.css
+++ b/web/css/productDetails.css
@@ -29,12 +29,12 @@
 
 .product-details-right {
     padding: 0;
-    float: left;
 }
 
 @media (min-width: 0) {
     .product-details-right {
         width: 250px;
+        float: none;
     }
     .product-picture img {
         width: 250px;
@@ -42,12 +42,15 @@
     }
     .product-details-left {
         width: 250px;
+        float: none;
     }
 }
 
 @media (min-width: 768px) {
     .product-details-right {
         width: 500px;
+        float: none;
+
     }
     .product-picture img {
         width: 500px;
@@ -55,12 +58,14 @@
     }
     .product-details-left {
         width: 500px;
+        float: none;
     }
 }
 
 @media (min-width: 992px) {
     .product-details-right {
         width: 500px;
+        float: left;
     }
     .product-picture img {
         width: 500px;
@@ -68,12 +73,14 @@
     }
     .product-details-left {
         width: 355px;
+        float: right;
     }
 }
 
 @media (min-width: 1200px) {
     .product-details-right {
         width: 500px;
+        float: left;
     }
     .product-picture img {
         width: 500px;
@@ -81,6 +88,7 @@
     }
     .product-details-left {
         width: 355px;
+        float: right;
     }
 }
 
@@ -171,10 +179,6 @@
 .product-description {
     margin-top: 15px;
     font: normal normal normal 16px/1.55em Museo-Slab-W01-100, serif;
-}
-
-.product-details-left {
-    float: right;
 }
 
 .product-name h1 {
@@ -366,6 +370,53 @@
 
 .product-details-left .quantity input[type="number"] {
     -moz-appearance: textfield;
+}
+
+.input-group{
+    width: 82px;
+    position: relative;
+}
+
+.spinner-arrows{
+    position: absolute;
+    right: 10px;
+    width: 17px;
+    height: 43px;
+    top: 0;
+    opacity: 0;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    font-family: glyphicons, serif;
+}
+
+.spinner-arrows:hover{
+    opacity: 1;
+}
+
+.spinner-arrows .up-arrow{
+    line-height: 28px;
+    display: block;
+    height: 50%;
+    cursor: pointer;
+    font-size: 15px;
+    opacity: .5;
+}
+
+.spinner-arrows .up-arrow:before{
+    content: "\e113";
+}
+
+.spinner-arrows .down-arrow{
+    line-height: 18px;
+    display: block;
+    height: 50%;
+    cursor: pointer;
+    font-size: 15px;
+    opacity: .5;
+}
+
+.spinner-arrows .down-arrow:before{
+    content: "\e114";
 }
 
 .product-parameters {
